--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
-    <title>Portfolio</title>
+    <title>Rohan Harpalani</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
