--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohan Harpalani</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="main">
-        <nav>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                </ul>
-            </div>
-        </nav>
+    <div id="particles-js">
+        <div class="heading">
+            <h1>Rohan Harpalani</h1>
+            <h3>Computer Engineering @ Illinois</h3>
+        </div>
     </div>
+
+    <script src="./particles.js-master/particles.js"></script>
+    <script src="./particles.js-master/demo/js/app.js"></script>
 </body>
 </html>
+
