--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rohan Harpalani</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;800&family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <title>Rohan Harpalani</title>
 </head>
+
 <body>
-    <div id="particles-js">
-        <div class="heading">
-            <h1>Rohan Harpalani</h1>
+    <section id="particles-js">
+        <section class="heading">
+            <h1><b>Rohan Harpalani</b></h1>
             <h3>Computer Engineering @ Illinois</h3>
-        </div>
-    </div>
+        </section>
+    </section>
+    <section class="intro">
+        <h2></h2>
+    </section>
 
     <script src="./particles.js-master/particles.js"></script>
     <script src="./particles.js-master/demo/js/app.js"></script>
 </body>
-</html>
 
+</html>
